Api for Phlo; Ses: store email info into transaction table
